[project]
name = "awsscripts"
version = "0.1.0-dev"
description = "Python scripts to manage AWS with CDKTF"
authors = [{ name = "Mario", email = "marioapgs@gmail.com" }]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "ruff",
    "cdktf",
    "pytest",
    "boto3",
    "requests",
    "hvac"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["awsscripts"]

[tool.ruff]
line-length = 79
target-version = "py312"
lint.select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",
    "E",   # pycodestyle - errors
    "F",   # pyflakes
    "I",   # isort
    "RUF", # ruff specific rules
    "S",   # flake8-bandit
    "UP",  # pyupgrade
    "W",   # pycodestyle - warnings
]
lint.ignore = ["S603", "S501", "E501", "RUF012", "A002"]

[lint.isort]
known-first-party = ["awsscripts"]
